--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,24 @@ html {
   font-style: italic;
 }
 
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+    align-items: center;
+}
+
+.nav-links {
+    display: flex;
+}
+
+.nav-links a {
+    margin-left: 20px;
+    padding: 10px;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
 /* css for user guide */
 .nav_document {
   display: flex;
