--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 :root {
-  --bg: rgb(0,0,0)
+  --bg: rgb(0,0,0);
+  --bg-alpha: 0.4;
 }
 
 html {
   scroll-behavior: smooth;
 }
-
 
 .bold {
   font-weight: bold;
@@ -141,6 +141,12 @@ th, td {
     padding: 10px;
     color: rgb(255, 255, 255);
     text-decoration: none;
+    transition: all 0.3s ease 0s;
+}
+
+.nav-links a:hover {
+    background-color: #005aa0;
+    color: #0bedff;
 }
 
 /* css for user guide */
@@ -209,7 +215,6 @@ th, td {
 .highlight {
   background-color: rgb(49, 51, 56);
 }
-
 
 .outline ul {
   list-style-type: none;
@@ -497,7 +502,7 @@ body {
 }
 
 #grad1 h1 {
-  background: linear-gradient(90deg, rgba(0,249,255,1), rgba(244,0,255,1));
+  background-color: #FFFFFF;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -555,10 +560,9 @@ body {
 .content {
     display: flex;
     flex-direction: column;
+    width: 100%;
     min-height: 100vh;
     user-select: none;
-    margin-left: 30vh;
-    margin-right: 30vh;
     justify-content: center;
     align-items: center;
     color: rgb(19, 13, 13);
@@ -667,11 +671,12 @@ body {
 
 /* header */
 .header {
-  display: flex;
-  height: 6vh;
-  flex-direction: row;
-  align-items: center;
-  background-color: darkslateblue;
+    display: flex;
+    height: 6vh;
+    flex-direction: row;
+    align-items: center;
+    background-color: #56a0ff;
+;
 }
 
 .header p {
@@ -729,35 +734,34 @@ body {
   width: 2rem;
 }
 
-/* download button */
-#grad1 .downloadbutton {
-  width: 8rem;
-  height: 2rem;
-  background-color: transparent;
-  color: white;
-  border: 2px solid transparent;
-  border-image: linear-gradient(to right, #05f4ff, #f102ff);
-  border-image-slice: 1;
-  transition: background-color 0.3s, box-shadow 0.3s;
-  margin-top: 10rem;
+.video-bg:before {
+  content: '';
+  position: fixed;
+background: rgba(0, 0, 0, var(--bg-alpha, 0.4)); /* Initially no background alpha */
+  top: 0px;
+  right: 0;
+  bottom: 0px;
+  left: 0;
+  z-index: -99;
+  transition: background 0.5s ease;
 }
 
-#grad1 .downloadbutton:hover {
-  width: 8rem;
-  height: 2rem;
-  background-color: transparent;
-  color: white;
-  border: 2px solid transparent;
-  background-color: #313338;
-  border-image: linear-gradient(to right, #05f4ff, #f102ff);
-  border-image-slice: 1;
-  cursor: pointer;
+video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Maintain aspect ratio and cover the entire area */
+    z-index: -100;
+    transform: translate(-50%, -50%);
+    background-size: cover;
+    transition: 1s opacity;
+
+    filter: blur(0px);
+    -webkit-filter: blur(0px);
 }
 
-#grad1 .downloadbutton a {
-  color: #fff;
-  text-decoration: none;
-}
 
 /* animations */
 
