--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <title>Pinnacle Dynamo: Info</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
-    <script src="home_page.js"></script>
+    <link href="static/style.css" rel="stylesheet" type="text/css">
+    <script src="static/home_page.js"></script>
 </head>
 <body>
 
 <div class="header">
     <div class="nav-bar">
         <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="transaction.html">Transactions</a>
-            <a href="about.html">About</a>
+            <a href="/home">Home</a>
+            <a href="/transactions">Transactions</a>
+            <a href="/about">About</a>
         </div>
     </div>
 </div>
