--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="utf-8">
     <title>Pinnacle Dynamo: Info</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
-    <script src="transaction.js"></script>
+    <link href="static/style.css" rel="stylesheet" type="text/css">
+    <script src="static/transaction.js"></script>
 </head>
 <body>
 
 <div class="header">
     <div class="nav-bar">
         <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="transaction.html">Transactions</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="/home">Home</a>
+            <a href="/transactions">Transactions</a>
+            <a href="/about">About</a>
         </div>
     </div>
 </div>
