--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -1,22 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Pinnacle Dynamo: Info</title>
-    <link href="static/style.css" rel="stylesheet" type="text/css">
-    <script src="static/transaction.js"></script>
-</head>
-<body>
-
-<div class="header">
-    <div class="nav-bar">
-        <div class="nav-links">
-            <a href="/home">Home</a>
-            <a href="/transactions">Transactions</a>
-            <a href="/about">About</a>
-        </div>
-    </div>
-</div>
+{% extends "layout.html" %}
+{% block content %}
 
 <div class="content">
     <div class="page" style="width: 95vw;">
@@ -76,12 +59,4 @@
     </div>
 </div>
 
-<div class="footer">
-    <p>2024 &copy; Solar Pool?. All rights reserved.</p>
-    <a class="ext-links" href="https://github.com/GlaucousGlaucus/PinnacleDynamo_Help">
-        <img alt="Lyrics Editor" src="Resources/Icons/github-mark-white.svg"/>
-    </a>
-</div>
-
-</body>
-</html>
+{% endblock content %}
