--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
     <title>Pinnacle Dynamo: Info</title>
     <link href="static/style.css" rel="stylesheet" type="text/css">
     <script src="static/home_page.js"></script>
+    <script src="static/transaction.js"></script>
 </head>
 <body>
 
