--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,15 +11,18 @@
 <div class="header">
     <div class="nav-bar">
         <div class="nav-links">
-            <a href="/home">Home</a>
+            <a href="/home">Dashboard</a>
             <a href="/transactions">Transactions</a>
             <a href="/about">About</a>
+        </div>
+        <div class="account-link">
+            <a href="/register">Account</a>
         </div>
     </div>
 </div>
 
 <div class="container">
-    {% block content %}{% endblock content %}
+  {% block content %}{% endblock %}
 </div>
 
 <div class="footer">
