--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -7,7 +7,7 @@
             <img style="width: 20vw; height: 20vw" src="static/Resources/images/profile.jpg">
             <p style="font-size: 0.5em; margin: 0;">Name</p>
             <p style="font-size: 0.2em; margin: 0;">Title</p>
-            <button>Sign Out</button>
+            <a class="button" href="{{ url_for('logout') }}">Sign Out</a>
         </div>
 
         <div style="height: 100%; border: 2px solid white;" class="line"></div>
