--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -5,8 +5,8 @@
     <div class="dashboard">
         <div class="user_display">
             <img style="width: 20vw; height: 20vw" src="static/Resources/images/profile.jpg">
-            <p style="font-size: 0.5em; margin: 0;">Name</p>
-            <p style="font-size: 0.2em; margin: 0;">Title</p>
+            <p style="font-size: 0.5em; margin: 0;">{{ current_user.username }}</p>
+            <p style="font-size: 0.2em; margin: 0;">User ID: {{ current_user.id }}</p>
             <a class="button" href="{{ url_for('logout') }}">Sign Out</a>
         </div>
 
