--- a/main/static/style.css
+++ b/main/static/style.css
@@ -815,6 +815,41 @@ video {
     gap: 20px;
 }
 
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #7d9bff;
+    background-color: transparent;
+    border: 2px solid #7d9bff;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: color 0.4s ease, background-color 0.4s ease;
+    position: relative;
+    overflow: hidden;
+    text-decoration: none;
+}
+
+.button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0088a9;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.4s ease;
+}
+
+.button:hover {
+    color: white;
+}
+
 button, .norm_btn {
     display: inline-block;
     padding: 10px 20px;
