--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -16,7 +16,7 @@
         <div class="balance_info_cont">
             <div class="info_options">
                 <button>Buy More</button>
-                <button>Sell</button>
+                <a class="button" href="{{ url_for('seller_page') }}">Sell</a>
             </div>
         </div>
     </div>
